[package]
name = "ics07-tendermint-zk"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
ics07-tendermint = { path = "../ics07-tendermint", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
ibc-proto = { path = "../../ibc/proto", default-features = false }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
bytes = { version = "1.1.0", default-features = false }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
ibc = { path = "../../ibc/modules", default-features = false }
prost = { version = "0.11", default-features = false }
