[package]
name = "ics07-tendermint"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = []

[dependencies]
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

ics23 = { version = "0.9.0", default-features = false }
time = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
prost = { version = "0.11", default-features = false }
bytes = { version = "1.1.0", default-features = false }
subtle-encoding = { version = "0.5", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
tendermint = { version = "0.29.0", default-features = false }
tendermint-proto = { version = "0.29.0", default-features = false }
tendermint-light-client-verifier = { version = "0.29.0", default-features = false }
log = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false }

[dev-dependencies]
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
env_logger = "0.9.0"
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tendermint-rpc = { version = "0.29.0", features = ["http-client", "websocket-client"] }
tendermint-testgen = { version = "0.29.0" } # Needed for generating (synthetic) light blocks.
log = "0.4.17"
tracing = "0.1.36"