[package]
name = "ics07-tendermint"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "rust-crypto"]
rust-crypto = ["sha2"]
std = [
	"bytes/std",
	"flex-error/std",
	"hex/std",
	"ibc/std",
	"ibc-proto/std",
	"ics23/std",
	"log/std",
	"prost/std",
	"serde/std",
	"serde_json/std",
	"sha2?/std",
	"subtle-encoding/std",
	"tendermint/std",
	"time/std",
	"tracing/std",
	"tracing-subscriber/std"
]

[dependencies]
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { workspace = true }

ics23 = { workspace = true }
time = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
subtle-encoding = { version = "0.5", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-light-client-verifier = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
sha2 = { version = "0.10", optional = true, default-features = false }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4", default-features = false }

[dev-dependencies]
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
env_logger = { workspace = true }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter", "json"]}
test-log = { version = "0.2.10", features = ["trace"] }
modelator = "0.4.2"
sha2 = { version = "0.10.2" }
tendermint-rpc = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", features = ["http-client", "websocket-client"] }
tendermint-testgen = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1" } # Needed for generating (synthetic) light blocks.
log = { workspace = true }
tracing = "0.1.36"
