[package]
name = "ics08-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { workspace = true }
hex = { version = "0.4.3", default-features = false }
cosmwasm-schema = { version = "1.1.3", default-features = false, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tendermint-proto = { workspace = true }

[features]
default = []
std = [
	"ibc/std",
	"ibc-proto/std",
	"prost/std",
	"hex/std", 
	"serde/std"
]
cosmwasm = ["cosmwasm-schema", "std", "serde", "ibc/cosmwasm"]
