[package]
name = "ics08-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.11", default-features = false }
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }
hex = { version = "0.4.3", default-features = false }
cosmwasm-schema = { version = "1.1.3", default-features = false, optional = true }
serde = { version = "1.0.145", default-features = false, features = ["derive"], optional = true }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "4d81b67c28510db7d2d99ed62ebfa9fdf0e02141", default-features = false }

[features]
default = []
std = [
	"ibc/std",
	"ibc-proto/std",
	"prost/std",
	"hex/std", 
	"serde/std"
]
cosmwasm = ["cosmwasm-schema", "std", "serde", "ibc/cosmwasm"]
