[package]
name = "ics10-grandpa"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]


[features]
default = ["std"]
std = [
    "ibc/std",
    "ibc-proto/std",
    "grandpa-client/std",
    "grandpa-client-primitives/std",
    "light-client-common/std",
    "prost/std",
    "prost-types/std",
    "codec/std",
    "anyhow/std",
    "serde/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-trie/std",
    "sp-finality-grandpa/std",
    "finality-grandpa/std",
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

# local deps
grandpa-client = { package = "grandpa-light-client-verifier", path = "../../algorithms/grandpa/verifier",  default-features = false }
grandpa-client-primitives = { package = "grandpa-light-client-primitives", path = "../../algorithms/grandpa/primitives", default-features = false }
light-client-common = { path = "../common", default-features = false }

# crates.io
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
anyhow = { version = "1.0.65", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }

# substrate deps
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
finality-grandpa = { version = "0.16.0", default-features = false }

tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }

[dev-dependencies]
hex = "0.4.3"
log = "0.4"
futures = "0.3.24"
env_logger = "0.9.0"
serde = { version = "1.0.144", features = ["derive"] }
beefy-prover = { path = "../../algorithms/beefy/prover" }
grandpa-prover = { path = "../../algorithms/grandpa/prover" }
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
subxt = { git = "https://github.com/paritytech/subxt",  rev = "d92352ad739836a4100e1ef1db607acc82ed8c5a", features = ["substrate-compat"] }
tokio = { version = "1.21.1", features = ["macros"] }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
json = { package = "serde_json", version = "1.0.85" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
finality-grandpa-rpc = { package = "sc-finality-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
jsonrpsee-ws-client = "0.16.2"
hyperspace-core = { path = "../../hyperspace/core", features = ["testing", "build-metadata-from-ws"] }
light-client-common = { path = "../common", features = ["std"] }
