[package]
name = "ics10-grandpa"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>"]


[features]
default = ["std"]
std = [
	"ibc/std",
	"ibc-proto/std",
	"grandpa-client/std",
	"grandpa-client-primitives/std",
	"light-client-common/std",
	"prost/std",
	"prost-types/std",
	"parity-scale-codec/std",
	"anyhow/std",
	"serde/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-trie/std",
	"sp-consensus-grandpa/std",
	"finality-grandpa/std",
	"frame-support/std",
	"futures/std",
	"hex/std",
	"log/std",
	"json/std",
	"sp-state-machine/std",
	"tendermint/std"
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { workspace = true, default-features = false }
ibc-proto = { workspace = true, default-features = false }

# local deps
grandpa-client = { package = "grandpa-light-client-verifier", path = "../../algorithms/grandpa/verifier",  default-features = false }
grandpa-client-primitives = { workspace = true }
light-client-common = { path = "../common", default-features = false }

# crates.io
prost = { workspace = true }
prost-types = { version = "0.11", default-features = false }
parity-scale-codec = { workspace = true }
anyhow = { version = "1.0.65", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
serde = { workspace = true, default-features = false, features = ["derive"] }

# substrate deps
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-trie = { workspace = true }
sp-consensus-grandpa = { workspace = true }
finality-grandpa = { version = "0.16.2", default-features = false }

tendermint = { workspace = true }
tendermint-proto = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
log = "0.4"
futures = "0.3.24"
env_logger = { workspace = true }
serde = { workspace = true }
beefy-prover = { path = "../../algorithms/beefy/prover" }
grandpa-prover = { path = "../../algorithms/grandpa/prover" }
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
subxt = { git = "https://github.com/paritytech/subxt",  tag = "v0.29.0", features = ["substrate-compat"] }
tokio = { version = "1.32.0", features = ["macros"] }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-trie = { workspace = true }
sp-core = { workspace = true }
json = { package = "serde_json", version = "1.0.85" }
frame-support = { workspace = true }
finality-grandpa-rpc = { package = "sc-consensus-grandpa-rpc", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
jsonrpsee-ws-client = "0.16.2"
hyperspace-core = { path = "../../hyperspace/core", features = ["testing", "build-metadata-from-ws"] }
light-client-common = { path = "../common", features = ["std"] }
