[package]
name = "ics11-beefy"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std", "build-metadata-from-ws"]
build-metadata-from-ws = [
    "beefy-prover/build-metadata-from-ws",
]
std = [
    "ibc/std",
    "ibc-proto/std",
    "beefy-client/std",
    "beefy-light-client-primitives/std",
    "light-client-common/std",
    "pallet-mmr-primitives/std",
    "beefy-primitives/std",
    "sp-runtime/std",
    "sp-storage/std",
    "sp-trie/std",
    "anyhow/std",
    "codec/std",
    "prost/std",
    "prost-types/std",
    "serde/std",
    "bytes/std",
    "tendermint/std",
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

# beefy deps
beefy-client = { package = "beefy-light-client", path = "../../algorithms/beefy/verifier",  default-features = false }
beefy-light-client-primitives = {  path = "../../algorithms/beefy/primitives", default-features = false }
light-client-common = { path = "../common", default-features = false }

# substrate deps
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

# crates.io
anyhow = { version = "1.0.65", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false }
serde = { version = "1.0", default-features = false }
bytes = { version = "1.1.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "47e28b50d20138234f7a8b4254da71469f401714", default-features = false }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", rev = "47e28b50d20138234f7a8b4254da71469f401714", default-features = false }

#substrate
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }

[dev-dependencies]
futures = "0.3.24"
serde = { version = "1.0.144", features = ["derive"] }
beefy-prover = { path = "../../algorithms/beefy/prover", features = ["build-metadata-from-ws"] }
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
subxt = { git = "https://github.com/ComposableFi/subxt", rev = "7a54d51ffe1d2daf785d13040276e5cbe30c29ed", features = ["substrate-compat"] }
tokio = { version = "1.21.1", features = ["macros"] }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
json = { package = "serde_json", version = "1.0.85" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
