[package]
name = "ics11-beefy"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
	"ibc/std",
	"ibc-proto/std",
	"beefy-client/std",
	"beefy-light-client-primitives/std",
	"light-client-common/std",
	"pallet-mmr-primitives/std",
	"beefy-primitives/std",
	"sp-runtime/std",
	"sp-storage/std",
	"sp-trie/std",
	"anyhow/std",
	"parity-scale-codec/std",
	"prost/std",
	"prost-types/std",
	"serde/std",
	"bytes/std",
	"tendermint/std",
	"frame-support/std",
	"futures/std",
	"json/std",
	"sp-core/std",
	"sp-state-machine/std"
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { path = "../../ibc/modules", default-features = false }
ibc-proto = { path = "../../ibc/proto", default-features = false }

# beefy deps
beefy-client = { package = "beefy-light-client", path = "../../algorithms/beefy/verifier",  default-features = false }
beefy-light-client-primitives = {  path = "../../algorithms/beefy/primitives", default-features = false }
light-client-common = { path = "../common", default-features = false }

# substrate deps
pallet-mmr-primitives = { package = "sp-mmr-primitives", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false, package = "sp-consensus-beefy" }
sp-runtime = { workspace = true }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-trie = { workspace = true }

# crates.io
anyhow = { version = "1.0.65", default-features = false }
parity-scale-codec = { workspace = true }
prost = { workspace = true }
prost-types = { version = "0.11", default-features = false }
serde = { workspace = true }
bytes = { version = "1.1.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = ["from"] }
tendermint = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
tendermint-proto = { workspace = true }

#substrate
sp-core = { workspace = true }

[dev-dependencies]
futures = "0.3.24"
serde = { workspace = true }
beefy-prover = { path = "../../algorithms/beefy/prover" }
ibc = { path = "../../ibc/modules", features = ["mocks"] }
ibc-derive = { path = "../../ibc/derive" }
subxt = { git = "https://github.com/paritytech/subxt",  tag = "v0.29.0", features = ["substrate-compat"] }
tokio = { version = "1.32.0", features = ["macros"] }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-trie = { workspace = true }
sp-core = { workspace = true }
json = { package = "serde_json", version = "1.0.85" }
frame-support = { workspace = true }
hyperspace-core = { path = "../../hyperspace/core", features = ["testing", "build-metadata-from-ws"] }
