[package]
name = "ics11-beefy"
version = "0.1.0"
edition = "2021"
authors = ["Seun Lanlege <seunlanlege@gmail.com>", "David Salami <wizdave97@gmail.com>"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
std = [
	"ibc/std",
	"ibc-proto/std",
	"beefy-light-client/std",
	"beefy-light-client-primitives/std",
	"light-client-common/std",
	"sp-mmr-primitives/std",
	"sp-consensus-beefy/std",
	"sp-runtime/std",
	"sp-storage/std",
	"sp-trie/std",
	"anyhow/std",
	"parity-scale-codec/std",
	"prost/std",
	"prost-types/std",
	"serde/std",
	"bytes/std",
	"tendermint/std",
	"frame-support/std",
	"futures/std",
	"serde_json/std",
	"sp-core/std",
	"sp-state-machine/std"
]

[build-dependencies]
prost-build = "0.11.1"

[dependencies]
# ibc deps
ibc = { workspace = true, default-features = false }
ibc-proto = { workspace = true, default-features = false }

# beefy deps
beefy-light-client = { workspace = true,  default-features = false }
beefy-light-client-primitives = {  workspace = true, default-features = false }
light-client-common = { workspace = true, default-features = false }

# substrate deps
sp-mmr-primitives = { workspace = true }
sp-consensus-beefy = { workspace = true, default-features = false }
sp-runtime = { workspace = true }
sp-storage = { workspace = true, default-features = false }
sp-trie = { workspace = true }

# crates.io
anyhow = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true, default-features = false }
serde = { workspace = true }
bytes = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from"] }
tendermint = { workspace = true }
tendermint-proto = { workspace = true }

#substrate
sp-core = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde = { workspace = true }
beefy-prover = { workspace = true }
ibc = { workspace = true, features = ["mocks"] }
ibc-derive = { workspace = true }
subxt = { workspace = true, features = ["substrate-compat"] }
tokio = { workspace = true, features = ["macros"] }
sp-state-machine = { workspace = true }
sp-trie = { workspace = true }
sp-core = { workspace = true }
serde_json = { workspace = true }
frame-support = { workspace = true }
# hyperspace-core = { workspace = true, features = ["testing", "build-metadata-from-ws"] }
